--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">CamMemberCard</string>
-
+    <string name="app_id">1817283938495674</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="google_key">AIzaSyDV6XPR0ohugeO2qgrdh9blp5TVfBKEek0</string>
     <string name="action_settings">Settings</string>
 </resources>
